@@ -1,3 +1,15 @@
+2010-01-17  Kevin Watters  <kevinwatters@gmail.com>
+
+        Reviewed by Kevin Ollivier.
+
+        [wx] On Win and GTK, we need to manually apply the transforms when falling back
+        to GDI / GDK drawing, but this is not needed on Mac since we always use CG there.
+        
+        https://bugs.webkit.org/show_bug.cgi?id=33730
+
+        * platform/wx/RenderThemeWx.cpp:
+        (WebCore::RenderThemeWx::paintButton):
+
 2010-01-17  Martin Robinson  <martin.james.robinson@gmail.com>
 
         Reviewed by Gustavo Noronha Silva.
